syntax = "proto3";
package bitid.did;


import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "bitid/did/params.proto";


option go_package = "github.com/SamuelReeder/BitID/x/did/types";

message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false];

  repeated IndexedStoredDID indexedStoredDID = 2 [(gogoproto.nullable) = false];
}

message DIDDocument {
  string context = 1;
  string id = 2;
  repeated VerificationMethod authentication = 3;
  repeated Service service = 4;
  string created = 5;
  string updated = 6;
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  string publicKeyPem = 4; // Public key in PEM format
}

message Service {
  string id = 1;
  string type = 2;
  string serviceEndpoint = 3;
}

message IndexedStoredDID {
  string index = 1;
  DIDDocument storedDID = 2 [(gogoproto.nullable) = false];
}
  