syntax = "proto3";
package bitid.did;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "bitid/did/params.proto";

option go_package = "github.com/SamuelReeder/BitID/x/did/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // DefineDIDDocument defines a method for creating or updating a DID document.
  rpc DefineDIDDocument(MsgDefineDIDDocument) returns (MsgDefineDIDDocumentResponse);

  // RemoveDIDDocument defines a method for removing a DID document.
  // rpc RemoveDIDDocument(MsgRemoveDIDDocument) returns (MsgRemoveDIDDocumentResponse);

  // rpc UpdateDIDDocument(MsgUpdateDIDDocument) returns (MsgUpdateDIDDocumentResponse);


  // Additional methods for your DID module
  // rpc AnotherMethod(MsgAnotherMethod) returns (MsgAnotherMethodResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "bitid/x/did/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}


message MsgDefineDIDDocument {
  option (cosmos.msg.v1.signer) = "creator";

  // creator is the message sender.
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string JSONString = 2;
}

// MsgCreateGameResponse defines the Msg/CreateGame response type.
message MsgDefineDIDDocumentResponse {}


// message MsgDefineDIDDocument {
//   string creator = 1;
//   string id = 2;
//   string document = 3; // The DID document content
// }

// message MsgDefineDIDDocumentResponse{
//     // Define any fields you want to include in the response
//     string success = 1;
// }
    
//     // MsgRemoveDIDDocument represents a request to remove a DID document.
// message MsgRemoveDIDDocument {
//     string creator = 1;
//     string id = 2;
// }
    
// message MsgRemoveDIDDocumentResponse {
//     // Define any fields you want to include in the response
//     string remover = 1;
// }